Fixed truncation on calendar time

--- a/client/src/pages/CalendarPage/sections/Calendar.scss
+++ b/client/src/pages/CalendarPage/sections/Calendar.scss
@@ -36,6 +36,10 @@
 
   &__event-time {
     margin-left: .25rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 55%;
   }
 
   &__event-icon {
